login flow woring

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,8 @@ GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
 GITHUB_ACCESS_TOKEN=
 
+DISCORD_CLIENT_ID=
+DISCORD_CLIENT_SECRET=
 # -----------------------------------------------------------------------------
 # Database (MySQL - PlanetScale)
 # -----------------------------------------------------------------------------
